--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 fastapi = "^0.105.0"
 uvicorn = "^0.24.0.post1"
 taskipy = "^1.12.2"
+ignr = "^2.2"
 
 
 [tool.poetry.group.dev.dependencies]
