--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ python = "^3.12"
 fastapi = "^0.105.0"
 uvicorn = "^0.24.0.post1"
 pydantic = {extras = ["email"], version = "^2.5.2"}
+pydantic-settings = "^2.1.0"
+sqlalchemy = "^2.0.23"
+alembic = "^1.13.1"
 
 
 [tool.poetry.group.dev.dependencies]
