--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pydantic = {extras = ["email"], version = "^2.5.2"}
 pydantic-settings = "^2.1.0"
 sqlalchemy = "^2.0.23"
 alembic = "^1.13.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-multipart = "^0.0.6"
 
 
 [tool.poetry.group.dev.dependencies]
