--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -5,6 +5,12 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL  }}
+      SECRET_KEY: ${{  secrets.SECRET_KEY  }}
+      ALGORITHM: ${{  secrets.ALGORITHM  }}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{  secrets.ACCESS_TOKEN_EXPIRE_MINUTES  }}
+
     steps:
       - name: Copy repository archives 
         uses: actions/checkout@v3
@@ -19,6 +25,6 @@ jobs:
 
       - name: Install dependencies
         run: poetry install
-        
+
       - name: Run tests
         run: poetry run task test
