--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,7 +10,16 @@ jobs:
       SECRET_KEY: ${{  secrets.SECRET_KEY  }}
       ALGORITHM: ${{  secrets.ALGORITHM  }}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${{  secrets.ACCESS_TOKEN_EXPIRE_MINUTES  }}
-
+    
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: app_db
+          POSTGRES_PASSWORD: app_password
+          POSTGRES_USER: app_user
+        ports:
+        - 5432:5432
     steps:
       - name: Copy repository archives 
         uses: actions/checkout@v3
