Add local host to database URL

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -6,11 +6,11 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL  }}
-      SECRET_KEY: ${{  secrets.SECRET_KEY  }}
-      ALGORITHM: ${{  secrets.ALGORITHM  }}
-      ACCESS_TOKEN_EXPIRE_MINUTES: ${{  secrets.ACCESS_TOKEN_EXPIRE_MINUTES  }}
-    
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      ALGORITHM: ${{ secrets.ALGORITHM }}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
+
     services:
       postgres:
         image: postgres
@@ -19,21 +19,22 @@ jobs:
           POSTGRES_PASSWORD: app_password
           POSTGRES_USER: app_user
         ports:
-        - 5432:5432
+          - 5432:5432
+
     steps:
-      - name: Copy repository archives 
+      - name: Copia os arquivos do repositório
         uses: actions/checkout@v3
 
-      - name: Install Python 3.12
+      - name: Instalar o python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.11.1'
 
-      - name: Install Poetry
+      - name: Instalar o poetry
         run: pipx install poetry
 
-      - name: Install dependencies
+      - name: Instalar dependências
         run: poetry install
 
-      - name: Run tests
+      - name: Executar testes
         run: poetry run task test
