--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ version: '3'
 services:
   fastduno_database:
     image: postgres
+    env_file:
+      .env
     volumes: 
       - pgdata:/var/lib/postgresql/data
     environment:
@@ -18,6 +20,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      .env
     ports:
       - "8000:8000"
     depends_on:
