--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
     depends_on:
       - fastduno_database
     environment:
-      DATABASE_URL: postgresql://app_user:app_password@localhost:5432/app_db
+      DATABASE_URL: postgresql://app_user:app_password@fastduno_database:5432/app_db
     
 volumes:
   pgdata:
