Add actions to install python

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,4 +8,5 @@ jobs:
     steps:
       - name: Insstall Python
         uses: actions/setup-python@v4
-        with: python-version: '3.12'
+        with: 
+          python-version: '3.12'
