--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,8 @@ version: '3'
 services:
   fastduno_database:
     image: postgres
-    env_file:
-<<<<<<< HEAD
-      - .env
+    env_file: .env
     volumes:
-=======
-      .env
-    volumes: 
->>>>>>> 4a92694ac858e9c86263e19d6cfdce9ea6b6d813
       - pgdata:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: app_user
@@ -25,12 +19,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    env_file:
-<<<<<<< HEAD
-      - .env
-=======
-      .env
->>>>>>> 4a92694ac858e9c86263e19d6cfdce9ea6b6d813
+    env_file: .env
     ports:
       - "8000:8000"
     depends_on:
