--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,7 +22,7 @@ jobs:
           - 5432:5432
     steps:
       - name: Copy repo files
-        run: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Insstall Python
         uses: actions/setup-python@v4
