--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 psycopg2-binary = "^2.9.9"
+pytest-env = "^1.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
